feat: auth email login, WebSocket hardening, OTel test infra, Java 21
## Auth
- Login accepte email ou username (détection par `@`)
- Nouveau `UserRepository.findByEmailWithRolesAndPermissions`
- `UserDetailsServiceImpl.loadUserEntityByEmail`
- `AuthenticationService` : log avec username résolu, non le login brut

## Security / CSRF
- `SecurityConfig` : `/ws/**` passe de `permitAll()` à `authenticated()`
- `csrfTokenRepository()` extrait en bean pour injection dans `AuthController`
- `/api/auth/csrf` génère et sauvegarde le token si absent (plus de 500 fallback)
- `auth.service.ts` : stocke le token CSRF depuis le body (fallback cookie)
- `SecurityConfig` : CSRF ignorelist migré vers `AntPathRequestMatcher`

## WebSocket
- Endpoint fixe `/ws/collaboration` pour les clients passant le runId via header `X-Run-Id`
- `WebSocketAuthInterceptor` : `resolveUserId()` extrait en helper (élimine la duplication CONNECT/SEND)
- `RUNS_PATH_PATTERN` static final (Pattern ne se compile plus à chaque message STOMP)
- Récupération userId/runId dans le handler SEND si session attrs non persistés

## Frontend
- `chat-interface.ts` : messages d'erreur détaillés (status + body.message/detail)
- `conversation-list.component.ts` : `forkJoin` + `ChangeDetectorRef.markForCheck()` remplace `setTimeout(0)`
- `orchestrator.service.ts` : mapping EXECUTION/PLANNING → "code" pour le backend
- `auth.service.ts` : `map(() => void 0)` pour conserver le type `Observable<void>`

## OpenTelemetry
- `OpenTelemetryConfig` : retourne `OpenTelemetry.noop()` si endpoint vide (évite l'exception au démarrage hors Docker)
- `application.yml` : endpoint OTLP vide par défaut (plus de spam Jaeger)
- `opentelemetry-sdk-testing` ajouté en scope test
- `OpenTelemetryTestConfig` : `InMemorySpanExporter @Primary` remplace le bean OTLP dans les contextes de test
- `WorkflowEngineIntegrationTest`, `DeveloperStepIntegrationTest` : `@Import(OpenTelemetryTestConfig.class)` — 261/261 tests verts
- Tests modernisés Java 21 :